--- a/src/content/blog/portfolio/about-me.mdx
+++ b/src/content/blog/portfolio/about-me.mdx
@@ -41,8 +41,6 @@ Joined the product development team at Optimizely's Content Marketing Platform -
 - Wrote tests and documentation/tech specs to unblock features, so that team can focus on more impactful projects
 - Resolved 4 SLA-bound customer issues, saving >$10,000 on each resolved issue
 
-  {/* PORTFOLIO_PROOF: Add a redacted screenshot of monitoring/logs showing ~1M+ requests/day (or a public proxy metric), plus 1-2 bullets on how you measured it. */}
-
 I got this role despite lacking formal backend experience. Self-studied backend engineering through projects and courses, and performed well in system design interviews.
 
 ---
@@ -65,7 +63,13 @@ GoZayaan is one of Bangladesh's leading travel platforms. I closed 154 PRs in 11
 
 **Other contributions:** Hotel booking review pages, gift card system, remittance admin dashboard with KYC module, email templates for ticket issuance.
 
-    {/* PORTFOLIO_PROOF: Add a Google Search Console (or analytics) screenshot for 33k -> 116k/month with a date range + note any confounders (seasonality, other initiatives). */}
+### Proof (search traffic growth)
+
+Source: Semrush (monthly organic traffic).
+
+![Before: ~33k monthly visits](./gozayaan-seo-before-graph.png)
+
+![After: ~116k monthly visits](./gozayaan-seo-after-graph.png)
 
 ---
 
